feat(common): 添加 AnsiColor 和 IPUtils 工具类并优化服务启动日志
- 新增 AnsiColor 工具类，支持终端 ANSI 颜色输出
- 新增 IPUtils 工具类，用于获取本机非回环 IPv4 地址
- 为 auth、gateway、system 模块添加启动耗时统计与美化日志输出
- 各服务模块新增 banner.txt 文件，增强品牌识别度
- 更新 Redisson 并发锁实现，使用 替代 collect toList()(Collectors.toList())